--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: test_report_parser
 description: This library contains an auto-generated Dart Model representing the events emitted by the Dart Tests JSON reporter.
-version: 1.1.0
+version: 1.2.0
 homepage: https://github.com/renatoathaydes/test_report_parser.dart/
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.15.0 <3.0.0'
 
 dev_dependencies:
-  pedantic: ^1.10.0
+  lints: ^1.0.1
   test: ^1.16.0
-  dartle: ^0.9.0
-  logging: ^1.0.0
+  dartle: ^0.12.0
+  logging: ^1.0.2
