--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,9 @@ homepage: https://github.com/renatoathaydes/test_report_parser.dart/
 environment:
   sdk: '>=2.19.0 <3.0.0'
 
+dependencies:
+  path: ^1.8.3
+
 dev_dependencies:
   lints: ^1.0.1
   test: ^1.16.0
